[package]
name = "desktop-background"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = { version = "0.29", features = [ "rwh_05" ] }
pixels = "0.13"
chrono = "0.4"
clap = { version = "4.5", features = [ "derive" ] }
image = "0.25"
anyhow = "1.0"
color-rs = "0.8"
interprocess = "1.2"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
